# simple-triangle-opengl-sdl3-wasm-cpp

./: .gitignore  CMakeLists.txt  README.md  build-wasm.bat  config-wasm.bat
public/: index.html
src/: main.cpp
